# telegram-crm-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/crm_bot/: bot.py  config.py  handlers.py  models.py  storage.py  test.py
