[tool.ruff]
line-lenght = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
disallow_untyped_defs = true

[project]
name = "telegram-crm-bot"
version = "0.0.0"
description = "Телеграм-бот для менеджмента заявок"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kazuma", email = "hmelevski_1948@mail.ru" }
]
dependencies = [
    "aiogram>=3.29.0"
]